--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.6</version>
+            <version>5.1.6</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
