--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.root=info
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://118.89.222.36:3306/market?useSSL=false&useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root2
-spring.datasource.password=123456
+spring.datasource.password=CWM2960922
 spring.datasource.tomcat.max-active=10
 spring.datasource.tomcat.initial-size=2
 spring.datasource.tomcat.min-idle=3
