--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # tomcat config
 server.port=9090
 # log
-logging.file=www_nefuer.log
-logging.level.root=info
+#logging.file=www_nefuer.log
+#logging.level.root=info
 # print SQL log
 #logging.level.cn.itgardener.apipurecybertech.core.mapper=debug
 #spring.output.ansi.enabled=detect
