--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ server.port=9090
 #spring.output.ansi.enabled=detect
 # tomcat db pool
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://118.89.222.36:3306/market?useSSL=false&useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root2
-spring.datasource.password=CWM2960922
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.tomcat.max-active=10
 spring.datasource.tomcat.initial-size=2
 spring.datasource.tomcat.min-idle=3
